<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weight_estimator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="inclassassignment.inclass2b.WeightEstimator">

    <TextView
        android:text="@string/target_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/bmi_ranges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="17dp"
        android:id="@+id/textView2"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupBMI"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioButton
        android:text="@string/range1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton" />

    <RadioButton
        android:text="@string/range2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:text="@string/range3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3" />

    <RadioButton
        android:text="@string/range4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton4" />
    </RadioGroup>

    <TextView
        android:text="@string/height_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_above="@+id/editTextFeet"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextFeet"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="@string/feet_hint" />

    <TextView
        android:text="@string/feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/editTextFeet"
        android:layout_toEndOf="@+id/editTextFeet"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:id="@+id/textView4"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editTextFeet"
        android:layout_alignRight="@+id/editTextFeet"
        android:layout_alignEnd="@+id/editTextFeet"
        android:layout_marginTop="11dp"
        android:id="@+id/editTextInches"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="@string/inches_hint" />

    <TextView
        android:text="@string/inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/editTextInches"
        android:layout_alignBottom="@+id/editTextInches"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculateWeight"
        android:layout_below="@+id/editTextInches"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/answer_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/answerstringhint"
        android:layout_below="@+id/calculateWeight"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerstringhint"
        android:layout_marginTop="13dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:id="@+id/weightOutput"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
